--- a/templates/piChart.html
+++ b/templates/piChart.html
@@ -19,7 +19,8 @@ var chart = new CanvasJS.Chart("chartContainer", {
     indexLabel: "{label} - #percent%",
     toolTipContent: "<b>{label}:</b> {y} (#percent%)",
     dataPoints: [
-      { y: {{ Data.Levenshtein }}, label: "Levenshtein" },
+      { y: {{ Data.Levenshtein }}, label: "User Distance" },
+      { y: {{ levMax }}, label: "Total Distance" },
     ]
   }]
 });
