Added updates bar chart

--- a/templates/barGraph.html
+++ b/templates/barGraph.html
@@ -18,9 +18,9 @@
 </style>
 </head>
 
-<body translate="no"><iframe class="chartjs-hidden-iframe" tabindex="-1" style="display: block; overflow: hidden; border: 0px; margin: 0px; top: 0px; left: 0px; bottom: 0px; right: 0px; height: 60%; width: 60%; position: absolute; pointer-events: none; z-index: -1;"></iframe>
+<body translate="no"><iframe class="chartjs-hidden-iframe" tabindex="-1" style="display: block; overflow: hidden; border: 0px; margin: 0px; top: 0px; left: 0px; bottom: 0px; right: 0px; height: 30%; width: 30%; position: absolute; pointer-events: none; z-index: -1;"></iframe>
 
-  <canvas id="densityChart" width="200" height="158" style="display: block; width: 200px; height: 158px;"></canvas>
+  <canvas id="densityChart" width="200" height="158" style="width: 200px; height: 158px;"></canvas>
     <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
