Added the diagnosis and stat material

--- a/templates/piChart.html
+++ b/templates/piChart.html
@@ -7,7 +7,7 @@ window.onload = function () {
 var chart = new CanvasJS.Chart("chartContainer", {
   animationEnabled: true,
   title:{
-    text: "Levenshtein Distance",
+    text: "Word Distance",
     fontSize: 30,
     horizontalAlign: "center"
   },
