--- a/templates/piChart.html
+++ b/templates/piChart.html
@@ -7,7 +7,7 @@ window.onload = function () {
 var chart = new CanvasJS.Chart("chartContainer", {
   animationEnabled: true,
   title:{
-    text: "Word Distance",
+    text: "",
     fontSize: 30,
     horizontalAlign: "center"
   },
@@ -19,8 +19,8 @@ var chart = new CanvasJS.Chart("chartContainer", {
     indexLabel: "{label} - #percent%",
     toolTipContent: "<b>{label}:</b> {y} (#percent%)",
     dataPoints: [
-      { y: {{ Data.Levenshtein }}, label: "User Distance" },
-      { y: {{ levMax }}, label: "Total Distance" },
+      { y: {{ Data.Levenshtein }}, label: "Mispoken Words" },
+      { y: {{ levMax }}, label: "Total Words" },
     ]
   }]
 });
